<resources>
    <string name="app_name">Demon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_library">Bibloteca</string>
    <string name="button_create_list">Crear lista nueva</string>
    <string name="title_name_list">Nombre de la Playlist</string>
    <string name="create">Crear</string>

    <!-- MSG data bases -->
    <string name="db_msg_insert_correct">Nueva playlist creada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- menu popup song -->
    <string name="add_to_list">Agregar a lista</string>
    <string name="delete_to_list">Quitar de lista</string>

    <!-- menu popup playlist -->
    <string name="delete_playlist">Borrar playlist</string>

    <!-- bottom sheet playlists -->
    <string name="add_to_list_label">Agregar a lista</string>

    <!-- bottom sheet playlists -->
    <string name="title_configuraciones">Configuraciones</string>
    <string name="develop_by">developed by </string>
    <string name="name_developer">Jose Carlos Huerta Garcia</string>
    <string name="instagram">developer Instagram</string>
    <string name="delete_data">Borrar datos</string>
    <string name="delete_data_describe">Unicamente las playlist serán borradas</string>


</resources>